Fixing safari flexbox gap 2

--- a/public/scss/safariFlexboxGap.scss
+++ b/public/scss/safariFlexboxGap.scss
@@ -6,6 +6,37 @@
   margin-right: 4.8rem;
 }
 
+.no-flexbox-gap .skill-rate-box {
+  margin-right: 1.7rem;
+}
+
+.no-flexbox-gap .info-container {
+  margin-right: 0.5rem;
+}
+
+.no-flexbox-gap .second-contact-container {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .massege-box-container {
+  margin-right: 3rem;
+}
+
+.no-flexbox-gap .hero {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .buttons {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .category {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .hero {
+  margin-right: 4.8rem;
+}
 .no-flexbox-gap .list-item:not(:last-child) {
   margin-bottom: 1.6rem;
 }
@@ -42,11 +73,18 @@
   .no-flexbox-gap .main-nav-list li:not(:last-child) {
     margin-right: 3.2rem;
   }
+  .no-flexbox-gap .skill-rate-box {
+    margin-right: 2.4;
+  }
 }
 
 @media (max-width: 59em) {
   .no-flexbox-gap .main-nav-list li:not(:last-child) {
     margin-right: 0;
     margin-bottom: 4.8rem;
+  }
+
+  .no-flexbox-gap .category {
+    margin-right: 3.2rem;
   }
 }
